--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@
 *,
 *::before,
 *::after {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -31,6 +33,7 @@ html {
   -moz-text-size-adjust: none;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
+  height: 100%;
 }
 
 /* Remove default margin in favour of better control in authored CSS */
@@ -91,6 +94,7 @@ textarea:not([rows]) {
   /* == COLOR PALLETTE == */
   /* Primary Color */
   --clr-red: hsl(4, 100%, 67%);
+  --clr-orangered: hsl(28, 100%, 45%);
 
   /* Neutral Colors */
   --clr-grey: hsl(0, 0%,58%);
@@ -119,31 +123,152 @@ textarea:not([rows]) {
 body {
   min-height: 100vh;
   min-height: 100svh;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background:  var(--clr-white);
   font-family: var(--ff-body);
   font-size: var(--fs-body);
+  color: var(--clr-blue-700);
   line-height: 1.5;
-  margin: 0;
-  padding: 0;
 }
 
 .main__content {
   width: 100%;
-  max-width: 47.9375rem;
-  background: inherit;
+  height: auto;
+  display: flex;
+}
+
+picture {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+picture .main__illustration {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
 }
 
 .main__signup--block {
-  width: 100%;
+  display: none;
 }
 
-.main__illustration {
-  width: 100%;
-  height: auto;
+.success-block {
+  background: var(--clr-white);
+}
+
+.success-message {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 5rem auto;
+  padding: var(--space-md);
+}
+
+.success-message img {
+  width: 4rem;
+  height: 4rem;
+  margin-block-end: var(--space-lg);
+}
+
+.success-message h1 {
+  font-size: clamp(2rem, 2vw, 2.5rem);
+  margin-block-end: var(--space-lg);
 
 }
+
+.success-message p {
+  margin-block-end: 10rem;
+  color: var(--clr-blue-700);
+  font-weight: var(--fw-regular);
+}
+
+.success-message p a {
+  text-decoration: none;
+}
+
+.success-message button {
+  display: block;
+  all: unset;
+  background: var(--clr-blue-800);
+  color: var(--clr-white);
+  padding: clamp(0.5rem, 1vw, 1rem) clamp(3.2rem, 2.5vw, 6rem);
+  border-radius: var(--space-xs);
+  text-align: center;
+  cursor: pointer;
+}
+
+
+@media screen and (min-width:48rem) {
+  body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+  }
+
+  .main__signup--block {
+    display: none;
+  }
+}
+
+
+@media screen and (min-width:64rem) {
+  body {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-items: center;
+  }
+
+  
+  
+
+  .main__signup--block {
+    display: none;
+  }
+
+  .success-block {
+    width: 100%;
+    height: 100vh;
+    background: var(--clr-blue-800);
+    display: grid;
+    place-items: center;
+  }
+
+  .success-message {
+    display: block;
+    width: 30%;
+    background: var(--clr-white);
+    border-radius: 0.6rem;
+    padding: var(--space-lg);
+  }
+
+  .success-message img {
+    width: 3rem;
+    height: 3rem;
+    margin-block-end: var(--space-md);
+  }
+
+  .success-message h1 {
+    margin-block-end: 0.5rem;
+    line-height: 1.1;
+  }
+
+  .success-message p {
+    font-size: 0.8rem;
+    margin-block-end: 1rem;
+  }
+
+  .success-message button {
+    padding: 0.3rem 5rem;
+  }
+
+  .success-message button:hover {
+    background: linear-gradient(to right, var(--clr-red), var(--clr-orangered));
+  
+}
+}
+
+
+
 
