--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,7 @@ textarea:not([rows]) {
   --space-sm: 1rem;
   --space-md: 1.5rem;
   --space-lg: 2rem;
+  --space-xlg: 2.5rem;
 }
 
 body {
@@ -133,27 +134,109 @@ body {
 .main__content {
   width: 100%;
   height: auto;
-  display: flex;
 }
 
 picture {
   display: block;
-  width: 100%;
   height: auto;
 }
 
 picture .main__illustration {
+  display: block;
   width: 100%;
   height: auto;
   object-fit: contain;
 }
 
 .main__signup--block {
-  display: none;
+  display: block;
 }
+
+.main__signup--copy {
+  padding: 2rem 1.5rem;
+}
+
+.main__signup--heading {
+  font-weight: var(--fw-bold);
+  font-size: 2.5rem;
+  margin-block-end: var(--space-md);
+}
+
+.main__signup--text {
+  font-weight: var(--fw-regular);
+  margin-block-end: var(--space-md);
+}
+
+.main__signup--copy ul{
+  padding-inline-start: 0; /* remove default padding for ul */
+  margin-block-end: var(--space-lg);
+  line-height: 1.4;
+}
+
+.main__signup--copy ul li {
+  margin-block-end: 1rem;
+  padding-inline-start: var(--space-lg);
+  position: relative;
+}
+
+.main__signup--copy ul li::before {
+  content: "";
+  position: absolute;
+  left: 0rem;
+  top: -0.1rem;
+  width: 1.4rem;
+  height: 1.4rem;
+  padding-inline-start: 0.2rem;
+  background-image: url(assets/images/icon-list.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.email-error-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 0.8rem;
+  margin-block-end: 0.5rem;
+}
+
+.field-button-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+}
+
+.field-button-container input, button  {
+  all: unset;
+  padding: 0.8rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  border: 1px solid var(--clr-grey);
+}
+
+.field-button-container input {
+  padding-inline-start: 1.5rem;
+  color: green;
+}
+
+.field-button-container button {
+  background: var(--clr-blue-800);
+  color: var(--clr-white);
+  text-align: center;
+  padding-block: 1rem;
+  font-size: 0.95rem;
+  font-weight: var(--fw-bold);
+}
+
+
 
 .success-block {
   background: var(--clr-white);
+  display: none;
+}
+
+.success-block.show {
+  display: block;
 }
 
 .success-message {
@@ -167,7 +250,7 @@ picture .main__illustration {
 .success-message img {
   width: 4rem;
   height: 4rem;
-  margin-block-end: var(--space-lg);
+  margin-block-end: var(--space-xlg);
 }
 
 .success-message h1 {
@@ -204,30 +287,117 @@ picture .main__illustration {
     flex-direction: column;
     align-items: center;
     justify-items: center;
+    font-size: 0.65rem;
   }
 
   .main__signup--block {
+    display: block;
+  }
+
+  .success-block {
+    width: 100%;
+    height: 100vh;
+    background: var(--clr-blue-800);
     display: none;
+  }
+
+  .success-block.show {
+    display: grid;
+    place-items: center;
+  }
+
+  .success-message {
+    display: block;
+    width: 50%;
+    max-width: clamp(20rem, 30vw, 30rem);
+    background: var(--clr-white);
+    border-radius: 0.6rem;
+    padding: var(--space-lg);
+  }
+
+  .success-message img {
+    width: 3rem;
+    height: 3rem;
+    margin-block-end: var(--space-md);
+  }
+
+  .success-message h1 {
+    margin-block-end: 0.8rem;
+    line-height: 1.1;
+  }
+
+  .success-message p {
+    font-size: 0.85rem;
+    margin-block-end: 1.5rem;
+  }
+
+  .success-message button {
+    display: block;
+    width: auto;
+    font-size: clamp(0.8rem, 0.5vw, 0.85rem);
+    font-weight: var(--fw-regular);
+    padding: 0.5rem clamp(3rem, 7vw, 7rem);
   }
 }
 
 
 @media screen and (min-width:64rem) {
   body {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-items: center;
+    display: grid;
+    place-items: center;
+    background: var(--clr-blue-800);
   }
 
-  
-  
+  .main__content {
+    width: 50%;
+  }
 
   .main__signup--block {
-    display: none;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    background: var(--clr-white);
+    border-radius: 0.8rem;
+    padding: 1rem;
+    gap: 1.5rem;
   }
 
-  .success-block {
+  picture {
+    order: 2;
+  }
+
+  .main__signup--heading {
+    font-size: 2rem;
+  }
+
+  .main__signup--copy {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .main__signup--copy ul {
+    margin-inline-start: -0.2rem;
+  }
+
+  .main__signup--copy ul li {
+    margin-block-end: 0.7rem;
+    margin-inline-start: -0.1rem;
+  }
+
+  .main__signup--copy ul li::before {
+    top: -0.05rem;
+    left: 0.5rem;
+    height: 1rem;
+    width: 1rem;
+  }
+
+  .email-error-container {
+    font-size: 0.7rem;
+  }
+
+
+
+  /*.success-block {
     width: 100%;
     height: 100vh;
     background: var(--clr-blue-800);
@@ -250,24 +420,25 @@ picture .main__illustration {
   }
 
   .success-message h1 {
-    margin-block-end: 0.5rem;
+    margin-block-end: 0.8rem;
     line-height: 1.1;
   }
 
   .success-message p {
-    font-size: 0.8rem;
-    margin-block-end: 1rem;
-  }
+    font-size: 0.85rem;
+    margin-block-end: 1.2rem;
+  }*/
 
   .success-message button {
-    padding: 0.3rem 5rem;
+    font-size: 0.8rem;
+    padding: 0.5rem 6.4rem;
   }
 
   .success-message button:hover {
     background: linear-gradient(to right, var(--clr-red), var(--clr-orangered));
-  
+  }
 }
-}
+
 
 
 
