--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,8 @@ picture .main__illustration {
 }
 
 .main__signup--block {
-  display: block;
+  /*display: block;*/
+  display: none;
 }
 
 .main__signup--copy {
@@ -158,7 +159,7 @@ picture .main__illustration {
 
 .main__signup--heading {
   font-weight: var(--fw-bold);
-  font-size: 2.5rem;
+  font-size: clamp(2.5rem, 4vw, 3rem);
   margin-block-end: var(--space-md);
 }
 
@@ -197,6 +198,7 @@ picture .main__illustration {
   align-items: center;
   justify-content: space-between;
   font-size: 0.8rem;
+  /*font-size: clamp(0.8rem, 2.3vw, 2rem);*/
   margin-block-end: 0.5rem;
 }
 
@@ -216,7 +218,6 @@ picture .main__illustration {
 
 .field-button-container input {
   padding-inline-start: 1.5rem;
-  color: green;
 }
 
 .field-button-container button {
@@ -225,14 +226,14 @@ picture .main__illustration {
   text-align: center;
   padding-block: 1rem;
   font-size: 0.95rem;
+  /*font-size: clamp(0.95rem, 2.3vw, 2rem);*/
   font-weight: var(--fw-bold);
 }
 
-
-
 .success-block {
   background: var(--clr-white);
-  display: none;
+  /*display: none;*/
+  display: block;
 }
 
 .success-block.show {
@@ -284,21 +285,29 @@ picture .main__illustration {
 @media screen and (min-width:48rem) {
   body {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-items: center;
-    font-size: 0.65rem;
+    font-size: 1.2rem;
   }
 
   .main__signup--block {
-    display: block;
+    /*display: flex;*/
+    display: none;
+    flex-direction: column;
+    margin: 1.5rem;
+  }
+
+  picture {
+    margin-block-end: 1.5rem;
   }
 
   .success-block {
     width: 100%;
     height: 100vh;
     background: var(--clr-blue-800);
-    display: none;
+    /*display: none;*/
+    display: grid;
+    place-items: center;
   }
 
   .success-block.show {
@@ -307,11 +316,13 @@ picture .main__illustration {
   }
 
   .success-message {
-    display: block;
-    width: 50%;
-    max-width: clamp(20rem, 30vw, 30rem);
+    width: clamp(20rem, 30vw, 30rem);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
     background: var(--clr-white);
-    border-radius: 0.6rem;
+    border-radius: 1rem;
     padding: var(--space-lg);
   }
 
@@ -332,12 +343,18 @@ picture .main__illustration {
   }
 
   .success-message button {
-    display: block;
-    width: auto;
-    font-size: clamp(0.8rem, 0.5vw, 0.85rem);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: stretch;  
+    white-space: nowrap; 
+    text-align: center;    
+    font-size: 1rem;        
+    line-height: 1;
+    padding: 1em 1.2em;
     font-weight: var(--fw-regular);
-    padding: 0.5rem clamp(3rem, 7vw, 7rem);
   }
+
 }
 
 
@@ -346,6 +363,7 @@ picture .main__illustration {
     display: grid;
     place-items: center;
     background: var(--clr-blue-800);
+    font-size: 0.65rem;
   }
 
   .main__content {
@@ -353,16 +371,19 @@ picture .main__illustration {
   }
 
   .main__signup--block {
-    display: grid;
+    /*display: grid;*/
+    display: none;
     grid-template-columns: repeat(2, 1fr);
     background: var(--clr-white);
-    border-radius: 0.8rem;
+    border-radius: 1.2rem;
     padding: 1rem;
-    gap: 1.5rem;
+    gap: 1rem;
+    margin: 0;
   }
 
   picture {
     order: 2;
+    margin-block-end: 0;
   }
 
   .main__signup--heading {
@@ -377,6 +398,7 @@ picture .main__illustration {
 
   .main__signup--copy ul {
     margin-inline-start: -0.2rem;
+    margin-block-end: 0.7rem;
   }
 
   .main__signup--copy ul li {
@@ -392,10 +414,26 @@ picture .main__illustration {
   }
 
   .email-error-container {
-    font-size: 0.7rem;
+    font-size: 0.65rem;
   }
 
+  .field-button-container {
+    gap: 0.9rem;
+  }
 
+  .field-button-container input, .field-button-container button {
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+  }
+
+  .field-button-container button {
+    font-size: 0.65rem;
+    transition: transform 0.3s ease;
+  }
+
+  .field-button-container button:hover {
+    transform: translateY(-3px);
+  }
 
   /*.success-block {
     width: 100%;
