--- a/styles.css
+++ b/styles.css
@@ -231,6 +231,9 @@ picture .main__illustration {
 }
 
 .success-block {
+  height: 100%;
+  min-height: 100vh;
+  min-height: 100svh;
   background: var(--clr-white);
   /*display: none;*/
   display: block;
@@ -303,7 +306,6 @@ picture .main__illustration {
 
   .success-block {
     width: 100%;
-    height: 100vh;
     background: var(--clr-blue-800);
     /*display: none;*/
     display: grid;
