--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ body {
   line-height: 1.5;
 }
 
-.main__content {
+.main__newsletter--signup {
   width: 100%;
   height: auto;
 }
@@ -186,7 +186,7 @@ picture .main__illustration {
   width: 1.4rem;
   height: 1.4rem;
   padding-inline-start: 0.2rem;
-  background-image: url(assets/images/icon-list.svg);
+  background-image: url(assets/icons/icon-list.svg);
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -376,7 +376,7 @@ picture .main__illustration {
     font-size: 0.65rem;
   }
 
-  .main__content {
+  .main__newsletter--signup {
     width: 50%;
   }
 
@@ -437,10 +437,11 @@ picture .main__illustration {
 
   .field-button-container button {
     font-size: 0.65rem;
-    transition: transform 0.3s ease;
+    transition: background 0.3s ease, transform 0.3s ease;
   }
 
   .field-button-container button:hover {
+    background: linear-gradient(to right, var(--clr-red), var(--clr-orangered));
     transform: translateY(-3px);
   }
 
