--- a/styles.css
+++ b/styles.css
@@ -135,14 +135,14 @@ body {
   height: auto;
 }
 
-picture {
-  display: block;
+.image-wrapper {
+  max-width: 100%;
   height: auto;
 }
 
-picture .main__illustration {
+img {
   display: block;
-  width: 100%;
+  max-width: 100%;
   height: auto;
   object-fit: contain;
 }
@@ -390,10 +390,17 @@ picture .main__illustration {
     margin: 0;
   }
 
-  picture {
+  .image-wrapper {
     order: 2;
-    margin-block-end: 0;
+    padding: 0;
+    margin: 0;
   }
+
+  .newsletter-image {
+    align-self: stretch;
+  }
+
+  
 
   .main__signup--heading {
     font-size: 2rem;
@@ -437,11 +444,11 @@ picture .main__illustration {
 
   .field-button-container button {
     font-size: 0.65rem;
-    transition: background 0.3s ease, transform 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.3s ease;
   }
 
   .field-button-container button:hover {
-    background: linear-gradient(to right, var(--clr-red), var(--clr-orangered));
+    background-color: linear-gradient(to right, var(--clr-red), var(--clr-orangered));
     transform: translateY(-3px);
   }
 
