fixed hover state for buttons

--- a/styles.css
+++ b/styles.css
@@ -218,7 +218,7 @@ body {
 }
 
 .field-button-container button {
-  background: var(--clr-blue-800);
+  background-color: var(--clr-blue-800);
   color: var(--clr-white);
   text-align: center;
   padding-block: 1rem;
@@ -286,7 +286,6 @@ body {
   font-size: 1rem;
   text-align: center;
   cursor: pointer;
- 
 }
 
 
@@ -452,13 +451,14 @@ body {
   }
 
   .field-button-container button {
+    background: var(--clr-blue-800);
     font-size: 0.7rem;
     padding: 0.7rem;
-    transition: background-color 0.3s ease, transform 0.3s ease;
+    transition: background 0.3s ease, transform 0.3s ease;
   }
 
   .field-button-container button:hover {
-    background-color: linear-gradient(to right, var(--clr-red), var(--clr-orangered));
+    background: linear-gradient(to right, var(--clr-red), var(--clr-orangered));
     transform: translateY(-3px);
   }
 
