--- a/styles.css
+++ b/styles.css
@@ -255,7 +255,6 @@ body {
 .success-message h1 {
   font-size: clamp(2.5rem, 2.5vw, 3rem);
   margin-block-end: var(--space-lg);
-
 }
 
 .success-message p {
@@ -280,7 +279,7 @@ body {
   height: 3em;
   width: 100%;
   box-sizing: border-box;
-  background: var(--clr-blue-800);
+  background-color: var(--clr-blue-800);
   border-radius: var(--space-xs);
   color: var(--clr-white);
   font-size: 1rem;
@@ -409,7 +408,6 @@ body {
     object-fit: contain;
   }
 
-
   .main__signup--heading {
     font-size: 2.5rem;
   }
@@ -452,13 +450,13 @@ body {
 
   .field-button-container button {
     background-color: var(--clr-blue-800);
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     padding: 0.7rem;
-    transition: background 0.3s ease, transform 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.3s ease;
   }
 
   .field-button-container button:hover {
-    background: linear-gradient(to right, var(--clr-red), var(--clr-orangered));
+    background-color: linear-gradient(to right, var(--clr-red), var(--clr-orangered));
     transform: translateY(-3px);
   }
 
@@ -468,7 +466,7 @@ body {
   }
 
   .success-message button:hover {
-    background: linear-gradient(to right, var(--clr-red), var(--clr-orangered));
+    background-color: linear-gradient(to right, var(--clr-red), var(--clr-orangered));
   }
 }
 
